--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@
 
 NODE_ENV = 'production'
 VUE_APP_TITLE = 'prod'
-VUE_APP_BASE_API = 'http://111.207.49.72:3000/mock/29'
+VUE_APP_BASE_API = 'http://47.94.174.42:33333'
